load billingcontroller in  base.html
Former-commit-id: eb26320fa7707703f626610409d0b4d38e41093e [formerly 3986402b29936c7a0e49ce7f1b1f47e977c3b332] [formerly 9fdde845800ef77ddb5929e4d422b45e459bbad2 [formerly 60195e78332af3df108b514d199c085793025485]]
Former-commit-id: b15c72ef20ab846b302cfa2ebcfee7f737187ae9 [formerly e19e63ca34133f11f8a809072f37d0fb9cedfcbe]
Former-commit-id: 2246bbb5b186167183bd797f7b77f2f88294d3ae

--- a/templates/base.html
+++ b/templates/base.html
@@ -194,6 +194,9 @@
                 <a href="#EditSetting"  class="btn-link addAnotherPhone" data-toggle="modal">{{_('My Setting')}} </a>
 
                   </li>
+                  <li>
+                    <a href="/#/billing/" class="btn-link addAnotherPhone" data-toggle="modal">{{_('Billing')}}</a>
+                  </li>
                 </ul>
               </li>
               <!-- END USER LOGIN DROPDOWN -->
@@ -530,6 +533,7 @@
    <script src="/static/app/scripts/controllers/mysettingcontrollers.js" ></script>
    <script src="/static/app/scripts/controllers/searchcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/accountcontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/billingController.js" ></script>
   <script src="/static/app/scripts/controllers/contactcontroller.js"></script>
   <script src="/static/app/scripts/controllers/opportunitycontroller.js" ></script>
   <script src="/static/app/scripts/controllers/livecontrollers/showcontrollers.js" ></script>
