--- a/templates/billing/billing_show.html
+++ b/templates/billing/billing_show.html
@@ -75,43 +75,7 @@
 
                                                 
                                             </div>
-                                                <div class="form-group">
-                                                    <span></span>
-                                                    <br>
-                                                    <br>
-                                                    <div class="col-md-12">
-
-                                                      <ul class="list-unstyled contact-infos">
-                                                        <li ng-show="showEmailForm">
-                                                            <div class="row">
-                                                                <form class="form-inline newLeadForm" role="form">
-                                                                    <div class="form-group lg-group" style="">
-                                                                        <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                                                        <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="exp@gmail.com" required>
-                                                                    </div>
-                                                                    <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')" >Add</button>
-                                                                    <button type="submit" ng-click="showEmailForm = false" class="btn btn-default">X</button>
-                                                                </form>
-                                                            </div>
-                                                        </li>
-                                                        <li ng-repeat="email in emails">
-                                                            <a editoptions editdataattr="deleteInfos(emails,$index)"  editable-text="email.email" >
-                                                                <%=email.email %>
-                                                            </a>
-                                                        </li>
-                                                        <li>
-                                                            <a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm = true">
-                                                                <i class="icon-plus"></i> Add a new email address </a>
-                                                        </li>
-                                                    </ul>
-
-                                                  <br>
-                                                  <div class="form-group">
-                                                    <textarea id="some-textarea" placeholder="Hi i want to add you to this project ..." id="noteBody" class="form-control ng-pristine ng-valid " rows="7" ng-model="message"></textarea>
-                                                     </div>
-                                                        
-                                                  </div>
-                                                </div>
+                                         
                                             </div>
 
                                  
@@ -120,9 +84,18 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                 <a class="btn red newBtn pull-right" ng-click="addNewUser(message)"  >
-                                              Invite    
-                                            </a>
+                                 <span class=" pull-right"  >
+                                              <form action="/paying" method="POST" id="BillingForm">
+                                      <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
+    data-amount="2000"
+    data-name="Demo Site"
+    data-description="2 widgets ($20.00)"
+    data-image="/128x128.png">
+  </script>
+</form>   
+                                            </span>
                             </div>
                         
                         </div>
@@ -136,7 +109,25 @@
    
     </div>
 </div>
+<script type="text/javascript">
+    $("#BiilingForm").submit(function() {
+         console.log( "i'm here folks !");
 
+    // var url = "path/to/your/script.php"; // the script where you handle the form input.
+
+    // $.ajax({
+    //        type: "POST",
+    //        url: url,
+    //        data: $("#idForm").serialize(), // serializes the form's elements.
+    //        success: function(data)
+    //        {
+    //            alert(data); // show response from the php script.
+    //        }
+    //      });
+
+    // return false; // avoid to execute the actual submit of the form.
+});
+</script>
 
 
 <script type="text/javascript">
