--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -872,7 +872,7 @@
                       </div>
                                   <!-- end oppo card-->
                               </div>
-                              <div ng-show="blankStateopportunity" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
+                              <div ng-show="blankStateopportunity && !showNewOpp"  class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
                                <div class="dashboard-stat cards">
 
 
@@ -1086,7 +1086,7 @@
                               </div>
                               </div>
                               </div>
-                                    <div ng-show="blankStatecase&&!cshowNewCase"  class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
+                                    <div ng-show="blankStatecase&&!showNewCase"  class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
                                         <div class="dashboard-stat cards">
 
 
