Rename linikedin data structure on the Api is done  fix #921
Former-commit-id: 80986900f5e6373855722896ebc435d9d216eb50 [formerly 9a6784a3d4e76f9e0f329879e8486d434c32088a] [formerly 736cc289b4e40254af1023a851e8783b07d54a05 [formerly 92519b36bece3b5c4e90376a4ca78231667983e4]]
Former-commit-id: 4cd719469b3e5203530aff142136ace06d75999d [formerly 49256a8cb98df9988ac40216153fbad59f8e3e81]
Former-commit-id: d3ec1414fd186ad75654ebf98c01a0ca63f8e52b

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -180,7 +180,7 @@
       </div>
   </div>
 </div>
-<form action="/stripe" method="POST">
+<!-- <form action="/stripe" method="POST">
   <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
     data-key="pk_test_4XcXjg4Qggo2HeVWnGaXwGDB"
@@ -189,7 +189,7 @@
     data-description="2 widgets ($20.00)"
     data-image="/128x128.png">
   </script>
-</form>
+</form> -->
 <div class="row">
   <div class="col-md-12">
     <div class="row">
