show linked in profile partialy
Former-commit-id: ec5a8ccdfb6165c9a3c8cca15876d7eb26b366af [formerly fc549444f53526c77e274e72b4b7e7de61dbcb33] [formerly dfd30c7da7d39d50107883c971d20947c8eec2ac [formerly 1db5afb35e118b6b3873d65223a3e9c9bd9b96a6]]
Former-commit-id: c96d79c006d89290749dc388c879313fe455180c [formerly ecb9d3db0e3328859a6d1f803114987be86a6f58]
Former-commit-id: 04a4a576994ca55c965695f49eb8851c2f86589e

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -729,9 +729,9 @@
                                                 </ul>
                     
                                             </div>
-                                            <div class="news-blocks blank-card blank-card-bluep newsCard">
+                                            <div class="news-blocks blank-card blank-card-bluep newsCard" ng-show="linkedProfile.current_post || linkedProfile.past_post">
                                                 <h3>Overview</h3>
-                                                <div class="news-block-tags" ng-show="kedProfile.current_post">
+                                                <div class="news-block-tags" ng-show="linkedProfile.current_post">
                                                     <strong>Current position</strong>
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
