Change de developerkey and the the id of the app
Former-commit-id: dd35a853aaea98434840c184e3de13375021149f [formerly a3aa8a3eaf801ba40a8810c09dbf3398def6f7e1] [formerly 1d5d71fa267ce7c27f2995e26d11101765f907f6 [formerly 55e365ff85071d5f277233a01f893a6cf2702f30]]
Former-commit-id: 95eb1e6834aabb891cc78724df7c11aa5833b8d9 [formerly 09cf26d54adf1d66a943077dbbf3d92c7c118673]
Former-commit-id: 9f40be92c7bfa5728977a6dd82dcf4cd3f67cdf9

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -696,7 +696,7 @@
                                                     </li>
                                                 </ul>
                                                 <div class="news-block-tags">
-                                                    <strong>profission</strong>
+                                                    <strong>profession</strong>
                                                 </div>
                                                 <ul class="list-unstyled contact-infos">
                                                     <li>
