Billing , use a custome form tp pay and api
Former-commit-id: 6416763531afdf29cbd339b7972604badf3d2800 [formerly ac1ca22fa1ca385bc7b207cfd928daaf8240b0fb] [formerly 3862241356292f6e587d83055ad95f05f27330bf [formerly 01503c671e492bdcfc71909272210a4a2077f1fd]]
Former-commit-id: bc412e1e2668db7653b6406661437329c654ad4c [formerly 450cf27c9d84db4774b9499c97ef12386b86b1b5]
Former-commit-id: 9a230994f7a9b3e416383faa55f754303d3867b3

--- a/templates/billing/billing_show.html
+++ b/templates/billing/billing_show.html
@@ -66,6 +66,7 @@
                                         <div class="row">
                                             <div class="col-md-9">
                                             <div class="pic">
+
                                             <a href="<%=user.google_public_profile_photo_url%>" class="">
                                                 <img alt="<%= user.google_display_name%>" src="<%=user.google_public_profile_photo_url%>" class="img-responsive profile-photo-large-billing-show" >
                                                 <span>
@@ -85,16 +86,17 @@
                             </div>
                             <div class="col-md-12">
                                  <span class=" pull-right"  >
+               <button id="customButton" class="btn red newBtn">Purchase</button>                                      <!-- 
                                               <form action="/paying" method="POST" id="BillingForm">
                                       <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
+    data-key="pk_test_4Xa35zhZDqvXz1OzGRWaW4mX"
     data-amount="2000"
     data-name="Demo Site"
     data-description="2 widgets ($20.00)"
     data-image="/128x128.png">
   </script>
-</form>   
+</form>   -->
                                             </span>
                             </div>
                         
