Change the content of the discovery_list.html
Former-commit-id: 91e62d11da5a5548e7ac375f4ea5bc50008e4b96 [formerly c5459a2dd5ed674b6658b696427cfcd1e5eb28a8] [formerly 7bd08e65feb5777bd83d0d722e05673839b13018 [formerly 1c29b98005edd975201ebe64fdbd0df2a0a2fac6]]
Former-commit-id: 392ec0d9b0bbac0950ad9e60b79091390a0ad850 [formerly c7f5b0f044177602f70afcbbcde310285c945441]
Former-commit-id: 42fb0e8db5969a6ae8191f59f4df15e4aa6d05af

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -103,7 +103,7 @@
               </li>
               <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTagForm()">
                 <a ng-click="" class="btn-link addAnotherPhone">
-                  <i class="fa fa-tags"></i>  {{_('Add a new label')}}
+                  <i class="fa fa-tags"></i>  {{_('Add a new Topic')}}
                 </a>
               </li>
             </ul>
@@ -222,7 +222,7 @@
             <div class="">
               <div class="blank_slate_arrow"></div>
               <div class="thumbnail blank_slate_body">
-                <p class="lead">{{ _('No results found, try with another filter') }}</p>
+                <p class="lead">{{ _('No results found, try with another filter, Add topics to retrieve news from twitter  ') }}</p>
               </div>
             </div>
           </div>
@@ -273,7 +273,7 @@
           </li>
           <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
             <a ng-click="" class="btn-link addAnotherPhone">
-              <i class="fa fa-tags"></i>  {{ _('Add a new label')}}
+              <i class="fa fa-tags"></i>  {{ _('Add a new topic')}}
             </a>
           </li>
         </ul>
@@ -281,7 +281,7 @@
           <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
           <div class="row">
             <div class="col-md-12 form-group">
-              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('New label')}}">
+              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('New Topic')}}">
             </div>
           </div>
           <div class="row">
@@ -297,7 +297,7 @@
           </div>
         </form>
         <div class="form-group btn-manage-tags" ng-show="tags">
-          <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">{{ _('Manage Tags')}}
+          <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">{{ _('Manage Topics')}}
           </button>
         </div>
       </div>
