pull from iogrow
Former-commit-id: 77a1298045f5050ef9915c16ba5122c66ee0a71d [formerly 3c8794a23e828494b8a7f1926d8659a65f9870aa] [formerly 0e65dd000198ea2983c03a1a5035dec96f3b7c7e [formerly 4a449f5c8106f9e5cbf9d5c39cfe1b31763b3c5a]]
Former-commit-id: 0ddba3d4bf51f7511a43d4a96830668b4697084c [formerly ae7203d4578a3cd51e75d5b05d9dd11521e3b9ef]
Former-commit-id: 7289ec229200ac0f092862761af9648823c6f2c2

--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -232,7 +232,7 @@
                                                 </div>
                                             </li>
                                             <li ng-repeat="website in websites">
-                                                <a editable-text="website.url" editoptions editdataattr="deleteInfos(websites,$index)" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="http://<%=website.url%>"  target="_blank" >
+                                                <a editable-text="website.url" editoptions editdataattr="deleteInfos(websites,$index)" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="<%=website.url%>"  target="_blank" >
                                                     <%=website.url%>
                                                 </a>
                                             </li>
