--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -156,6 +156,7 @@
                                 <option value="VND">₫ - VND</option>
                                 <option value="XCD">$ - XCD</option>
                                 <option value="ZAR">R - ZAR</option>
+                                <option value="DZD">د.ج - DZD</option>
                               </select>
                               </div>
                             </div>
