--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -214,7 +214,7 @@
                                         </form>
                                       </div>
                                     </li>
-                                    <li ng-repeat="website in websites"><a editoptions editdataattr="deleteInfos(websites,$index)" editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="http://<%=website.url%>"  target="_blank" ><%=website.url%></a> </li>
+                                    <li ng-repeat="website in websites"><a editoptions editdataattr="deleteInfos(websites,$index)" editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="<%=website.url%>"  target="_blank" ><%=website.url%></a> </li>
                                     <li><a   ng-hide="showWebsiteForm" ng-click="showWebsiteForm=true" class="btn-link addAnotherPhone"><i class="icon-plus"></i> {{_('Add a new Website')}} </a></li>
 
                                 </ul>
