--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -345,7 +345,7 @@
                                                             </form>
                                                         </div>
                                                     </li>
-                                                    <li ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="http://<%=website.url%>"  target="_blank" editoptions editdataattr="deleteInfonode('<%=website.entityKey%>','websites')" ><%=website.url%></a>
+                                                    <li ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="<%=website.url%>"  target="_blank" editoptions editdataattr="deleteInfonode('<%=website.entityKey%>','websites')" ><%=website.url%></a>
                                                         <a href="<%=website.url%>" target="new" class="icon-link" >
                                                         </a>
                                                      </li>
@@ -971,6 +971,7 @@
                                                                   <option value="VND">₫ - VND</option>
                                                                   <option value="XCD">$ - XCD</option>
                                                                   <option value="ZAR">R - ZAR</option>
+                                                                  <option value="DZD">د.ج - DZD</option>
                                                                 </select>
                                                                 </div>
                                                               </div>
@@ -2494,6 +2495,7 @@
                                 <option value="VND">₫ - VND</option>
                                 <option value="XCD">$ - XCD</option>
                                 <option value="ZAR">R - ZAR</option>
+                                <option value="DZD">د.ج - DZD</option>
                               </select>
                               </div>
                            
