--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -242,7 +242,7 @@
                     </div>
                   </li>
                   <li ng-repeat="website in websites">
-                    <a editoptions editdataattr="deleteInfos(websites,$index)" editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="http://<%=website.url%>"  target="_blank" >
+                    <a editoptions editdataattr="deleteInfos(websites,$index)" editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="<%=website.url%>"  target="_blank" >
                       <%=website.url%>
                     </a>
                   </li>
