--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -457,6 +457,7 @@
                                 <option value="VND">₫ - VND</option>
                                 <option value="XCD">$ - XCD</option>
                                 <option value="ZAR">R - ZAR</option>
+                                <option value="DZD">د.ج - DZD</option>
                               </select>
                           </div>
                           <div class="col-md-4 inline-div">
