pull from iogrow
Former-commit-id: 18956607378eba110b1fddd11f614135de1fbf7c [formerly 9404850a9b5f8d1a17dca315608c3fc753a144f8] [formerly 12b1e0236e9183441eb34f096c503332e6fb26a9 [formerly d36d34e76b20ed5e4bca9ed2d08124856d13396b]]
Former-commit-id: c4fa6dee80053d4dc7e5a69f92e5384a5fef6e53 [formerly cc6746cfb9dded5ed09c5d6222b3905d06571d63]
Former-commit-id: e6dc0deba6485da8981ebe7405870863f6d1b2af

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -345,7 +345,7 @@
                                                             </form>
                                                         </div>
                                                     </li>
-                                                    <li ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="<%=website.url%>"  target="_blank" editoptions editdataattr="deleteInfonode('<%=website.entityKey%>','websites')" ><%=website.url%></a>
+                                                    <li ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="http://<%=website.url%>"  target="_blank" editoptions editdataattr="deleteInfonode('<%=website.entityKey%>','websites')" ><%=website.url%></a>
                                                         <a href="<%=website.url%>" target="new" class="icon-link" >
                                                         </a>
                                                      </li>
@@ -971,7 +971,6 @@
                                                                   <option value="VND">₫ - VND</option>
                                                                   <option value="XCD">$ - XCD</option>
                                                                   <option value="ZAR">R - ZAR</option>
-                                                                  <option value="DZD">د.ج - DZD</option>
                                                                 </select>
                                                                 </div>
                                                               </div>
@@ -1157,7 +1156,7 @@
                                       </div>
                                                   <!-- end oppo card-->
                                               </div>
-                                              <div ng-show="blankStateopportunity" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
+                                              <div ng-show="blankStateopportunity && !showNewOpp " class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
                                                <div class="dashboard-stat cards">
 
 
@@ -1357,7 +1356,7 @@
                                               </div>
                                               </div>
                                               </div>
-                                                    <div ng-show="blankStatecase&&!cshowNewCase"  class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
+                                                    <div ng-show="blankStatecase&&!showNewCase"  class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
                                                         <div class="dashboard-stat cards">
 
 
@@ -2495,7 +2494,6 @@
                                 <option value="VND">₫ - VND</option>
                                 <option value="XCD">$ - XCD</option>
                                 <option value="ZAR">R - ZAR</option>
-                                <option value="DZD">د.ج - DZD</option>
                               </select>
                               </div>
                            
