before pull from iogrow
Former-commit-id: f879813228d45f23970e792efdba9d814bf2a1b0 [formerly 491cde2832506120ffe7ff71f0403d0038d62196] [formerly 8f19310be1c2a628149aee485b4f6e0195bc0422 [formerly a0b8cc42c875334d7ea6ec99a1f7cee37f53514f]]
Former-commit-id: 958f56d591d40fb436c025ba1037caefd723b0b0 [formerly d08b3ad11274d1af5d89cda04e929536820a3081]
Former-commit-id: a6fa6e5cf22a8ad38fff5c402da3dc1fed8bd5dc

--- a/templates/base.html
+++ b/templates/base.html
@@ -394,7 +394,9 @@
 <a href="#SendFeedbackModal"  class="btn-link addAnotherPhone" >
   <a href="#SendFeedbackModal" data-toggle="modal" class="btn pull-right" style="
     right: 0px;
-">{{_('Send feedback')}}</a>
+">
+  <i class="fa fa-thumbs-up"></i>
+{{_('Send feedback')}}</a>
 <br>
          © i/oGrow  2013 - 2014
   </div>
