fixing image of account show not responsive at mozila firefox fix #958
Former-commit-id: c75a88ed9cb739a8047bbf50ad5832b2bc5632fa [formerly f64cbe833078308e2c17a977dd2c6203db6993a6] [formerly 5092d75b8bb1518f7236f8006f116f56d2ecf2ff [formerly 747408f7fbb60450f8e760b5c0174fd5889171b8]]
Former-commit-id: 5b1b7769decf434dd2385ae34da2b883f80d48b5 [formerly 3e386ba973427650f49f9c2fd40b48089e790b51]
Former-commit-id: 45a3ffeaba3b1e4a75864872bc2956634175a260

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="showPage custom-show margin-bottom-15  col-md-12">
                     <div class="row margin-bottom-10">
-                        <div class="col-md-2" ng-mouseenter="showUpload = true" ng-mouseleave="showUpload = false">
+                        <div class="col-md-2 col-sm-2" ng-mouseenter="showUpload = true" ng-mouseleave="showUpload = false">
                             <div class="pic account-photo-large">
                                 <img alt="<%=account.name%>" class=" img-responsive img-thumbnail" ng-src="<%=imageSrc%>">
                                 <a ng-show="showUpload" ng-click="createLogoPickerUploader()" href="" class="btn btn-default btn-upload btn-upload-account" data-toggle="modal" style="display: none;">
@@ -64,7 +64,7 @@
                             </div>
 
                         </div>
-                        <div class="col-md-10">
+                        <div class="col-md-10 col-sm-10">
                             <div class="row">
                                 <div class="col-md-12">
                                     <span class="page-meta pull-right">
