Billing stuff , using stripe api
Former-commit-id: 443f4ba65e52f7ca8992122e58c38861eee2c675 [formerly 75f1ad67645d945145c7d318d68e388a9ead244c] [formerly d04e6f45ba61a3dbbde99ba8c734c540e2de559e [formerly 55097b394c9ce9aab5d930acd44a0ac4eb4b5fa8]]
Former-commit-id: 056a056556df620eb75676588ce67de3eb5dd259 [formerly fed0bce5f95cd6cb3a53807cc0ea616ed5a1597d]
Former-commit-id: 55ab12b93463e642cbc6d1bad853f59cd4c96559

--- a/templates/billing/billing_list.html
+++ b/templates/billing/billing_list.html
@@ -67,13 +67,13 @@
             <div class="detailsSection">
               <div class="head">
                 <div class="pic">
-                  <a href="/#/billing/show/<%=user.id%>" class="startup-link" title="user.google_display_name">
+                  <a href="/#/billing/show/<%=user.stripe_id%>" class="startup-link" title="user.google_display_name">
                     <img ng-show="user.google_public_profile_photo_url" class="img-responsive profile-photo" ng-src="<%= user.google_public_profile_photo_url %>">
                   </a>
                 </div>
                 <div class="text">
                   <div class="name">
-                    <a href="/#/billing/show/<%=user.id%>" class="profile-link">
+                    <a href="/#/billing/show/<%=user.stripe_id%>" class="profile-link">
                        <%= user.google_display_name %>
                     </a>
                   </div>
@@ -105,7 +105,7 @@
             <div class="detailsSection">
               <div class="head">
                 <div class="pic">
-                  <a href="<%= user.google_public_profile_url %>" class="startup-link" title="<%= invitee.invited_mail %>">
+                  <a href="/#/billing/show/<%=invitee.stripe_id%>" class="startup-link" title="<%= invitee.invited_mail %>">
                     <img ng-src="/static/img/avatar_2x.png" class="img-responsive profile-photo">
                   </a>
                 </div>
