Display detail contact
Former-commit-id: 8bf53b944336b3970b0c0b179acb2ee56b6c0908 [formerly e54bf37f8b47a919abfe06ef538398020a1ae4c2] [formerly 48d1dcce0a079d0ae08369224c08d35e71b3fb9a [formerly a0809c741ae9a80b83ff804d56c8116af70847f1]]
Former-commit-id: c546899c0a78787c02e0365358d89697576fa0bc [formerly c6ca3cb3b2a3eaea4bed3b26ff1bb7a7304a9e4f]
Former-commit-id: 5f7d67e5749f7e3f1354ccf7c365a9f1a6d83865

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -164,7 +164,7 @@
                     <a ng-click="waterfallTrigger();selectedTab = 6;">{{ _('Cases')}}</a>
                   </li>
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 9}">
-                    <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Details of Lead')}}</a>
+                    <a ng-click="waterfallTrigger();selectedTab = 9;">{{_('Details of Contact')}}</a>
                   </li>
 
                   <li class="dropdown md-menu-inv">
