working on tasks page
Former-commit-id: 48bd82912b73ccf419ece03348b748f060c79724 [formerly 5c6863cffe9b73a250c52f99b2eef33dd32400db] [formerly cff20256f2d3a520d5b1db7c51140f948e0d6164 [formerly d160542bf96ad8d5f65e2987c74041be038c8614]]
Former-commit-id: 91a39eb746930cfd5d0c132d5d28fb67040b48b4 [formerly d431c6bdf377b9d70ebe9e032f134df2944cb172]
Former-commit-id: f5a630852aedff0ccc20cf1e2e772fd27723bb57

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -185,9 +185,16 @@
                       </i>
                     </span>
                     </button>
+                    <div class="taskShowDue">
+                     <span ng-hide="showDueCalendar" ng-click="showDueCalendar=true" class="ng-binding">
+                     <i class="fa fa-calendar"></i>  {{ _("<%=task.due%>")}}</span>
+                     <div ng-show="showDueCalendar" class="input-icon" style="display: none;">
+                           <i class="fa fa-calendar"></i>
 
-                    <datetimepick icon-class='fa fa-bell-o' label-format='MMM d, h:mm a' on-change="updateTask(task)" ng-model='newTask.reminder' class="new-task-reminder btn-unstyled  "></datetimepick>
-                    <datetimepick ng-model='newTask.due' class="new-task-date btn-unstyled" label-format='MMM d, h:mm a'></datetimepick>
+                          <input cusdatetimepicker data-model="task.due" type="text" class="form-control" placeholder="{{ _('From')}}" value="" id="leadEventStartsAt">
+
+                     </div>
+                    </div>
                </form>
                <ul class="list-unstyled ">
                  <li ng-show="task.tags" class="inline-tags">{{ _('Tags:')}}</li>
