--- a/templates/base.html
+++ b/templates/base.html
@@ -435,13 +435,13 @@
 
 
 
-    var ROOT = '/_ah/api';
+    //var ROOT = '/_ah/api';
 
 
 
 
 
-     //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+     var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
