--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -98,24 +98,21 @@
 
     <div class="col-md-12">
     <div class="row subHeaderContainer">
-        <div class=" col-md-9 col-sm-9 col-xs-9 subHeaderContent">
-           <div class="row">
-              <h2 class="page-title">{{ _("Leads") }} </h2>
-           </div>
-        </div>
-     <div class="col-md-3 col-sm-3 col-xs-3">
-        <div class="row">
-         <div class="pull-right" >
-           <a href="/#/leads/new" class="btn red newBtn">
-                       {{ _(" New Lead") }}
-                       
-          </a>
-        </div>
+       <div class=" col-md-9 col-sm-9 col-xs-9 subHeaderContent">
+          <div class="row">
+              <h2 class="page-title">Leads </h2>
          </div>
-    
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-3">
+          <div class="row">
+            <div class="pull-right">
+             <a href="/#/leads/new" class="btn red newBtn">
+                           New Lead
+             </a>
+          </div>
+          </div>
+      </div>
     </div>
-
-  </div>
   <div class="row">
   <div class="col-md-12">
     <div class="row ">
@@ -167,7 +164,7 @@
               </button>
             </div>
         </div>
-        <div ng-repeat="lead in leads" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
+        <div ng-repeat="lead in leads" droppable  id="card_<%=$index%>"class="cardElement leadElement" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;" data-span="1" >
         <div class="btn-group inCardOptionsBtn">
             <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
              <i class="fa fa-ellipsis-vertical"></i>
@@ -398,6 +395,11 @@
         placeholder: "{{ _('Click to Select a label')}}",
         allowClear: false
     });
+        $('.waterfall').waterfall({
+        colMinWidth: 200,
+        defaultContainerWidth: 800,
+        autoresize: true
+       });
   var handleUniform = function () {
         if (!jQuery().uniform) {
             return;
@@ -413,12 +415,6 @@
         }
     }
     handleUniform();
-
-    $('.waterfall').waterfall({
-        colMinWidth: 200,
-        defaultContainerWidth: 800,
-        autoresize: true
-      });
 $('.textfill').textfill({debug: true, maxFontPixels: 16});
 $('#slimList').slimScroll({});
 </script>
