--- a/templates/admin/users/user_show.html
+++ b/templates/admin/users/user_show.html
@@ -106,18 +106,14 @@
             <div class="col-md-12">
               <div class="tabbable tabbable-custom">
                 <ul class="nav nav-tabs">
-                  <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;allTasks();">{{ _("All Tasks") }}</a></li>
-                  <li class="ng-tab" ng-class="{active: selectedTab == 2}"><a ng-click="selectedTab = 2;urgentTasks();" >{{ _("Urgent Tasks") }}</a></li>
-                  <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;createdByMe('{{ME}}');">{{ _("Created by Me") }}</a></li>
-                  <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;assignedToMe('{{ME}}');">{{ _("Assigned to Me") }}</a></li>
+                  <li class="ng-tab" ng-class="{active: selectedTab == 1}"><a ng-click="selectedTab = 1;allTasks();">{{ _("Open Tasks") }}</a></li>
+                  <li class="ng-tab" ng-class="{active: selectedTab == 2}"><a ng-click="selectedTab = 2; completedTasks();" >{{ _("Completed Tasks") }}</a></li>
                   <li class="ng-tab sm-menu hidden-lg hidden-md"><a ng-click="showTagFilterCard();">{{ _("Filter by Tags") }}</a></li>                   
                   <li class="dropdown sm-menu-inv">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       More <i class="fa fa-angle-down"></i>
                     </a>
                     <ul class="dropdown-menu drp-dwn-xs-right" role="menu">
-                      <li class="ng-tab sm-menu-inv" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;createdByMe('{{ME}}');">{{ _("Created by Me") }}</a></li>
-                      <li class="ng-tab sm-menu-inv" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;assignedToMe('{{ME}}');">{{ _("Assigned to Me") }}</a></li>
                       <li class="ng-tab sm-menu-inv"><a ng-click="showTagFilterCard();">{{ _("Filter by Tags") }}</a></li>
                     </ul>
                   </li>
