insert users/show link on team page and all tasks page
Former-commit-id: f071ec60ca03d8d6cdd900f439b8ca80089bc674 [formerly 7ce1a4d1da2910469a77af674402cbbf399b9241] [formerly eff3a4cdab1ec8ef7eb6eefe0a0bd72c73848f2c [formerly d30ad82c3d19dd7ee76c26e3e35714bdcef36922]]
Former-commit-id: 12f85b6b3612e90c68045b275622f5433df93a1f [formerly 7c57a50bfbd4507e59af194914fcf25196b77f01]
Former-commit-id: 7b9a520d9b87f29b3ac6c2ae17912578d9efa833

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -55,13 +55,13 @@
             <div class="detailsSection">
               <div class="head">
                 <div class="pic">
-                  <a href="<%= user.google_public_profile_url %>" class="startup-link" title="user.google_display_name">
+                  <a href="/#/admin/users/show/<%= user.google_user_id %>" class="startup-link" title="user.google_display_name">
                     <img ng-show="user.google_public_profile_photo_url" class="img-responsive profile-photo" ng-src="<%= user.google_public_profile_photo_url %>">
                   </a>
                 </div>
                 <div class="text">
                   <div class="name">
-                    <a href="<%= user.google_public_profile_url %>" class="profile-link">
+                    <a href="/#/admin/users/show/<%= user.google_user_id %>" class="profile-link">
                        <%= user.google_display_name %>
                     </a>
                   </div>
