--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -267,8 +267,9 @@
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
-                                               <a href="#"> @<%= assignee.display_name %></a>
-                                               <img alt="" src="<%= assignee.photo%>" class="user-photo" />
+                                               <a href="/#/admin/users/show/<%= assignee.google_user_id %>"> @<%= assignee.display_name %>
+                                                 <img alt="" src="<%= assignee.photo%>" class="user-photo" />
+                                               </a>
                                             </span>
                                         </div>
                                     </div>
